--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "paper-button": "PolymerElements/paper-button#~1.0.3",
-    "iron-selector": "PolymerElements/iron-selector#~1.0.2"
+    "iron-selector": "PolymerElements/iron-selector#~1.0.2",
+    "iron-icons": "PolymerElements/iron-icons#~1.0.3"
   }
 }
