--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "paper-button": "PolymerElements/paper-button#~1.0.3",
     "iron-selector": "PolymerElements/iron-selector#~1.0.2",
-    "iron-icons": "PolymerElements/iron-icons#~1.0.3"
+    "iron-icons": "PolymerElements/iron-icons#~1.0.3",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.0.4"
   }
 }
