--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,9 @@
     "iron-selector": "PolymerElements/iron-selector#^1.0.2",
     "iron-icons": "PolymerElements/iron-icons#^1.0.3",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.4",
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.8",
-    "nodecg-replicant": "NodeCGElements/nodecg-replicant#~0.5.1"
+    "nodecg-replicant": "NodeCGElements/nodecg-replicant#~0.5.4"
+  },
+  "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.1.4"
   }
 }
